--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,45 @@
+#profile
+spring.profiles.active=prod
 
+#application
+server.port=8080
+
+#log
+logging.level.com.ramacciotti.external.api=info
+logging.level.root=error
+logging.level.org.springframework.web=error
+logging.level.org.hibernate=error
+
+#info
+info.app.name=java-spring-rest-feign-postgresql
+info.app.version=0.0.1
+info.app.description=this project aims to consume data from an external api
+info.app.author=Mariana Ramacciotti
+info.app.repository=https://github.com/Ramacciotti/java-spring-rest-feign-postgresql
+info.app.linkedin=https://www.linkedin.com/in/marianaramacciotti/
+info.app.content=JAVA17, SpringBoot, API REST, Web, Relational Database, PostGreSQL, OpenApi 3.0
+
+#springdoc
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.groups-aClientOrder=asc
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+
+#datasource
+spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER:EMPTY}
+spring.datasource.url=${SPRING_DATASOURCE_URL:EMPTY}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:EMPTY}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:EMPTY}
+
+#jpa
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextural_creation=true
+
+#spring
+spring.main.banner-mode=off
+spring.jpa.show-sql=false
+
+#dynami-links
+external.api.base.url=https://jsonplaceholder.typicode.com
