--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,8 @@
-#profile
-spring.profiles.active=prod
-
 #application
 server.port=8080
 
-#log
-logging.level.com.ramacciotti.external.api=info
-logging.level.root=error
-logging.level.org.springframework.web=error
-logging.level.org.hibernate=error
-
 #info
 info.app.name=java-spring-rest-feign-postgresql
-info.app.version=0.0.1
 info.app.description=this project aims to consume data from an external api
 info.app.author=Mariana Ramacciotti
 info.app.repository=https://github.com/Ramacciotti/java-spring-rest-feign-postgresql
@@ -33,13 +23,15 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:EMPTY}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:EMPTY}
 
 #jpa
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.jdbc.lob.non_contextural_creation=true
-
-#spring
-spring.main.banner-mode=off
 spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextural_creation=true
 
 #dynami-links
 external.api.base.url=https://jsonplaceholder.typicode.com
+
+#log
+logging.level.com.ramacciotti.service=DEBUG
+logging.level.com.ramacciotti=INFO
+logging.level.root=ERROR
