--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.disable-swagger-default-url=true
 
 #datasource
-spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER:EMPTY}
-spring.datasource.url=${SPRING_DATASOURCE_URL:EMPTY}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:EMPTY}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:EMPTY}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.username=postgres
+spring.datasource.password=ramacciotti123
 
 #jpa
 spring.jpa.show-sql=false
