--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 #datasource
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee
-spring.datasource.username=postgres
-spring.datasource.password=ramacciotti123
+spring.datasource.username=x
+spring.datasource.password=y
 
 #jpa
 spring.jpa.show-sql=false
