--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,19 +19,20 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 #datasource
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.initialization-mode=always
 spring.datasource.username=x
-spring.datasource.password=y
+spring.datasource.password=x
+spring.datasource.platform=postgresql
 
 #jpa
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextural_creation=true
 
 #dynami-links
 external.api.base.url=https://jsonplaceholder.typicode.com
 
 #log
-logging.level.com.ramacciotti.service=DEBUG
+logging.level.com.ramacciotti.service=INFO
 logging.level.com.ramacciotti=INFO
 logging.level.root=ERROR
