--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,11 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 
 #datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee
 spring.datasource.initialization-mode=always
-spring.datasource.username=x
-spring.datasource.password=x
 spring.datasource.platform=postgresql
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #jpa
 spring.jpa.show-sql=true
