--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
         run: docker build -t employee-crud:latest .
 
       - name: Run Docker container with Secrets  # Passo que roda o container Docker com as variáveis secretas do GitHub
-        run: docker run -d -p 8080:8080 \  # Roda container em modo destacado (-d) mapeando a porta 8080
-          -e SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} \  # Passa variável de ambiente para URL do banco
-          -e SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }} \  # Passa variável de ambiente para usuário do banco
-          -e SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} \  # Passa variável de ambiente para senha do banco
-          employee-crud:latest  # Nome da imagem que será executada
+        run: |
+          docker run -d -p 8080:8080 \
+            -e SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} \
+            -e SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }} \
+            -e SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} \
+            employee-crud:latest
