adding GitHub Actions workflow with tests and Docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,19 @@
-name: Java CI with Maven and Docker  # Nome do workflow
+name: Java CI with Maven and Docker Compose  # Nome do workflow
 
 on:
   push:
-    branches: [main]  # Executa o workflow quando houver push na branch main
+    branches: [main]  # Executa no push na branch main
   pull_request:
-    branches: [main]  # Executa o workflow para pull requests direcionados à branch main
+    branches: [main]  # Executa em PRs para a main
 
 jobs:
   build:
     runs-on: ubuntu-latest  # Define que o job vai rodar numa VM Ubuntu atualizada
+
+    env:
+      # Variáveis do banco que virão dos Secrets do GitHub
+      SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+      SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
 
     steps:
       - name: Checkout repository  # Passo para baixar o código do repositório
@@ -17,16 +22,17 @@ jobs:
       - name: Set up JDK 17  # Passo para configurar o JDK 17 na VM
         uses: actions/setup-java@v3
         with:
-          java-version: '17'  # Define a versão do Java que será usada
-          distribution: 'temurin'  # Define a distribuição do Java (Temurin é uma distribuição OpenJDK)
+          java-version: '17' # Define a versão do Java que será usada
+          distribution: 'temurin' # Define a distribuição do Java (Temurin é uma distribuição OpenJDK)
 
       - name: Build Docker image  # Passo que constrói a imagem Docker da aplicação
         run: docker build -t employee-crud:latest .
 
-      - name: Run Docker container with Secrets  # Passo que roda o container Docker com as variáveis secretas do GitHub
-        run: docker run -d -p 8080:8080 -e SPRING_DATASOURCE_URL=${{ secrets.SPRING_DATASOURCE_URL }} -e SPRING_DATASOURCE_USERNAME=${{ secrets.SPRING_DATASOURCE_USERNAME }} -e SPRING_DATASOURCE_PASSWORD=${{ secrets.SPRING_DATASOURCE_PASSWORD }} employee-crud:latest
+      - name: Start services with docker-compose  # Sobe app e banco juntos
+        run: |
+          docker-compose up --build -d
 
-      - name: Wait for the application to be ready and test Swagger endpoint  # Passo que espera a aplicação subir e testa o endpoint Swagger
+      - name: Wait for the application to be ready  # Passo que espera a aplicação subir e testa o endpoint Swagger
         run: |
           for i in {1..30}; do
             echo "Tentativa $i: testando Swagger..."
@@ -38,3 +44,6 @@ jobs:
           done
           echo "Erro: Aplicação não respondeu após 30 tentativas"
           exit 1
+
+      - name: Stop and remove containers  # Limpa tudo após o teste
+        run: docker-compose down -v
