adding GitHub Actions workflow with tests and Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'  # Versão da sintaxe do docker-compose usada
+version: '3.8'  # Versão da sintaxe do docker compose usada
 
 services:
   db:  # Serviço do banco de dados PostgreSQL
