--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Docker image  # Passo que constrói a imagem Docker da aplicação
         run: docker build -t employee-crud:latest .
 
-      - name: Start services with docker-compose  # Sobe app e banco juntos
+      - name: Start services with docker compose  # Sobe app e banco juntos
         run: |
           docker compose up --build -d
 
@@ -46,4 +46,4 @@ jobs:
           exit 1
 
       - name: Stop and remove containers  # Limpa tudo após o teste
-        run: docker-compose down -v
+        run: docker compose down -v
