--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,9 @@ external.api.base.url=https://jsonplaceholder.typicode.com
 logging.level.com.ramacciotti.service=INFO
 logging.level.com.ramacciotti=INFO
 logging.level.root=ERROR
+
+# observability
+management.endpoints.enabled-by-default= false
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.health.enabled= true
+management.endpoint.prometheus.enabled= true
